--- a/templates/login.html
+++ b/templates/login.html
@@ -15,15 +15,15 @@
       <div class="toggle-container">
         <label class="toggle-label" id="facilitator-label">
           <input type="radio" name="role" value="facilitator" checked>
-          Facilitator
+          <i class='bx bxs-user'></i> Facilitator
         </label>
         <label class="toggle-label" id="unitcoordinator-label">
           <input type="radio" name="role" value="unit_coordinator">
-          Unit Coordinator
+          <i class='bx bxs-book'></i> Unit Coordinator
         </label>
         <label class="toggle-label" id="admin-label">
           <input type="radio" name="role" value="admin">
-          Admin
+          <i class='bx bxs-shield'></i> Admin
         </label>
       </div>
     </div>
