--- a/templates/login.html
+++ b/templates/login.html
@@ -28,6 +28,7 @@
       </div>
     </div>
     <form action="{{ url_for('login') }}" method="POST" id="login-form">
+      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
       <div id="login-title">
         <h1><span class="title-line"></span></h1>
         <p class="role-subtitle"></p>
