--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -101,9 +101,17 @@
 
   <!-- MODAL -->
   <div id="createUnitModal" class="modal-overlay hidden">
-    <div class="modal-box">
+    <div class="modal-box" role="dialog" aria-modal="true" aria-labelledby="create-unit-title">
       <!-- Close button -->
-      <button onclick="closeCreateUnitModal()" class="modal-close">✕</button>
+      <button onclick="closeCreateUnitModal()" class="modal-close" aria-label="Close">✕</button>
+
+      <!-- Top title -->
+      <div class="modal-top">
+        <div class="modal-title">
+          <h1 id="create-unit-title">Create New Unit</h1>
+          <p>Set up a new teaching unit with sessions and schedule</p>
+        </div>
+      </div>
 
       <!-- Progress steps header -->
       <div class="modal-steps">
@@ -158,6 +166,7 @@
       </form>
     </div>
   </div>
+
 
   <!-- JS -->
   <script>
